[package]
name = "dothis"
version = "0.1.3"
authors = ["Tomás Farías <tomas@tomasfarias.dev>"]
edition = "2018"

[dependencies]
clap = "~2.33"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "~1.0"
serde = { version = "~1.0", features = ["derive"] }
reqwest = { version = "~0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
prettytable-rs = "^0.8"
